--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html>
-
+<!---------------todos feb 6th 2024------------------->
+<!----------------auth and cart adding not working------------------>
+<!----------------class=imgPreiview is adversly ------------------>
+<!----------------affecting the ui/dom in the product details page------------------>
+<!----------------send message function confirmation reduce spam------------------>
+<!---------------------------------->
+<!---------------------------------->
+<!---------------------------------->
+<!---------------------------------->
+<!---------------------------------->
+<!---------------------------------->
+<!---------------------------------->
+<!---------------------------------->
+<!---------------------------------->
+<!-----------------troubleshoot when in use----------------->
+<!-----------------stripe added----------------->
+<!---------------------------------->
     <%- include('config/head.ejs')%>
 
 <body onload="bodyLoader()">
